[package]
name = "my_minigrep"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command line tool to retrieve all lines from a file containing a given string."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
